--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                 <h3 class="border">A PRIMEIRA VERSÃO</h3>
                 <p class="negrito">A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <span class="marcar">Dan Morrill</span>. Ele conta que abriu o <span class="marcar">Inkscape</span> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <picture>
-                    
                     <img src="imagens/dan-droids.png" alt="desenho androids" class="imagemaj">
                 </picture>
                 <p class="negrito">Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <span class="marcar">Dandroids</span>.</p>
@@ -45,7 +44,9 @@
                 <img src="imagens/bugdroid.png" alt="android" class="imagemaj-b">
                 <p class="negrito">A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
                 <div class="border-a">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="dentro">
+                        <iframe src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="border-b">
                     <h4>Quer aprender mais?</h4>
